# ShopEase

backend/: .gitignore  connect.js  database.py  main.py  models.py  package.json  pyproject.toml  server.js
backend/routes/: auth.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  theme.js
frontend/src/components/: axiosInstance.js
frontend/src/components/Auth/: Signup.jsx
frontend/src/components/Home/Hero Section/: Hero.jsx
frontend/src/components/Home/cards/: Cards.jsx
